<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapping</name>
  <version>1.0.0</version>
  <description>Node to use the lidar</description>
  <maintainer email="lemmeltom@gmail.com">Tom</maintainer>
  <license>ECN</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  
  <depend>my_robot_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
